# csa3

./: .coverage  .gitignore  README.md  data_section.txt  golden_test.py  integration_tests_machine.py  integration_tests_translator.py  isa.py  machine.py  pyproject.toml  target.out  translator.py
.github/workflows/: python.yaml
examples/: cat.asm  cat_code.out  factorial.asm  hello.asm  hello_code.out  hello_user.asm  hello_user_code.out  input.txt  name.txt  prob1.asm  sum.asm  sum_code.out  test_cat_code.out  test_hello_code.out  test_hello_user_code.out  test_sum_code.out
golden/: cat.yml  hello.yml  hello_user.yml  prob1.yml
integration-tests/: integration_tests_machine.py  integration_tests_translator.py
