[tool.poetry]
name = "csa-lab3"
version = "0.1.0"
description = ""
authors = ["tolst <tolstykh_mariia@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
coverage = "^7.2.7"
mypy = "^1.4.1"
python = "^3.11"
pytest = "^8.2.1"
path = "^16.14.0"
pytest-golden = "^0.2.2"
ruff = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
